Modifiche alla posizione dei file json e a GameInformation e Component